force-app/main/default/objects/Onsite_Workflow_Step__c/Onsite_Workflow_Step__c.object-meta.xml
<CustomObject>
    <label>Onsite Workflow Step</label>
    <nameField>
        <label>Onsite Workflow Step Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Onsite Workflow Steps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>