force-app/main/default/objects/Onsite_Workflow_Step__c/fields/Input__c.field-meta.xml
<CustomField>
    <fullName>Input__c</fullName>
    <label>Input</label>
    <length>40</length>
    <type>Text</type>
</CustomField>