force-app/main/default/objects/Onsite_Workflow_Step__c/fields/Onsight_Flow_Job__c.field-meta.xml
<CustomField>
    <fullName>Onsight_Flow_Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsight Flow Job</label>
    <referenceTo>OnsightFlowJob__c</referenceTo>
    <relationshipLabel>Onsite Workflow Steps</relationshipLabel>
    <relationshipName>Onsite_Workflow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>