force-app/main/default/objects/Onsite_Workflow_Step__c/Onsite_Workflow_Step__c.field-meta.xml
<CustomField>
    <fullName>Onsite_Workflow_Step__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Onsite Workflow Step</label>
    <referenceTo>Onsite_Workflow_Step__c</referenceTo>
    <relationshipLabel>Onsite Workflow Steps</relationshipLabel>
    <relationshipName>Onsite_Workflow_Steps</relationshipName>
    <type>Lookup</type>
</CustomField>