force-app/main/default/objects/Onsite_Workflow_Step__c/fields/Started__c.field-meta.xml
<CustomField>
    <fullName>Started__c</fullName>
    <label>Started</label>
    <type>DateTime</type>
</CustomField>