force-app/main/default/objects/Onsite_Workflow_Step__c/fields/Step_Metadata__c.field-meta.xml
<CustomField>
    <fullName>Step_Metadata__c</fullName>
    <label>Step Metadata</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>