force-app/main/default/objects/Onsite_Workflow_Step__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <length>40</length>
    <type>Text</type>
</CustomField>